# arm_translator

./: Android_x86.cmake  Makefile.am  Makefile.in  README.md  config-android.sh  configurellvm.sh  extractfunctioninfo.py  filterSymbol.sh  isel_amd64.cpp  llvm.3.6.1.android.patch  llvm.3.6.1.patch  llvm.patch  main.cpp  main.gyp  my_gyp  symbols  symbols_to_be_tested  testelf.py
llvm/: AbbreviatedTypes.h  Abbreviations.h  AssemblerBuffer.h  CommonValues.cpp  CommonValues.h  Compile.cpp  Compile.h  CompilerState.cpp  CompilerState.h  DisasContextBase.h  ExecutableMemoryAllocator.h  InitializeLLVM.cpp  InitializeLLVM.h  IntrinsicRepository.cpp  IntrinsicRepository.h  LLVMAPI.cpp  LLVMAPI.h  LLVMAPIFunctions.h  LLVMCompile.cpp  LLVMDisasContext.cpp  LLVMDisasContext.h  LLVMHeaders.h  LLVMLink.cpp  Link.cpp  Link.h  Output.cpp  Output.h  PlatformDesc.h  Registers.h  StackMaps.cpp  StackMaps.h  TcgGenerator.cpp  TcgGenerator.h  Trampoline32.S  VexHeaders.h  VexTranslator.cpp  VexTranslator.h  X86Assembler.h  llvm.gyp  llvm.gypi  (+2 more)
qemu/: DisasContextBase.h  QEMUDisasContext.cpp  QEMUDisasContext.h  aes.c  aes.h  bitops.h  bswap.h  compatglib.c  compatglib.h  compiler.h  cpu.h  cpuinit.c  cpuinit.h  crc32c.c  crypto_helper.c  ghash.h  helper-gen.h  helper-head.h  helper-proto.h  helper-tcg.h  helper.c  helper.h  host-utils.c  host-utils.h  iwmmxt_helper.c  neon_helper.c  qemu.gyp  qemu.gypi  softfloat-specialize.h  softfloat.c  softfloat.h  tb.h  tcg-optimize.cpp  tcg-target.cpp  tcg-target.h  tcg.h  tcg_functions.h  tgtypes.h  translate.c  translate.h  (+1 more)
test/: Check.cpp  Check.h  Helpers.cpp  Helpers.h  IRContext.cpp  IRContext.h  IRContextInternal.cpp  IRContextInternal.h  IRParser.y  IRScanner.l  RegisterAssign.cpp  RegisterAssign.h  RegisterInit.cpp  RegisterInit.h  RegisterOperation.cpp  RegisterOperation.h  TestParser.l  TestParser.y  TestScanner.l  Vec.cpp  Vec.h  dispatch_vex.S  main.cpp  test.gyp  test.gypi
tests/: IRExit.txt  IRExit_Const.txt  IRLoadGStoreG.txt  IRLoadStore.txt  test1.S  testAddSubMulDiv.S  testAddSubMulDiv.txt  testConditional.S  testConditional.txt  testsADC.S  testsADC.txt  testsAND.S  testsAND.txt  testsASR.S  testsASR.txt  testsBFC.S  testsBFC.txt  testsBFI.S  testsBFI.txt  (+44 more)
